--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -1,5 +1,5 @@
 # Serbian translation of beast
-# Courtesy of Prevod.org team (http://www.prevod.org/) -- 2003, 2004.
+# Courtesy of Prevod.org team (http://prevod.org/) -- 2003, 2004.
 #
 # This file is distributed under the same license as the beast package.
 #
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-11 09:34+0100\n"
-"PO-Revision-Date: 2004-01-23 12:07+0100\n"
+"POT-Creation-Date: 2004-02-12 05:54+0100\n"
+"PO-Revision-Date: 2004-02-12 05:55+0100\n"
 "Last-Translator: Danilo Šegan <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -168,9 +168,9 @@ msgid "Opening project `%s'"
 msgstr "Otvara projekat „%s“"
 
 #: beast-gtk/bstapp.c:597
-#, fuzzy, c-format
+#, c-format
 msgid "Loading skin `%s'"
-msgstr "Učitavam talas „%s“"
+msgstr "Učitavam motiv „%s“"
 
 #. FIXME: undo Edit when hide && GXK_DIALOG_HIDE_ON_DELETE
 #: beast-gtk/bstapp.c:759
@@ -283,9 +283,8 @@ msgid "Open Project"
 msgstr "Otvori projekat"
 
 #: beast-gtk/bstfiledialog.c:396
-#, fuzzy
 msgid "Select File"
-msgstr "Izaberi"
+msgstr "Izaberi datoteku"
 
 #: beast-gtk/bstfiledialog.c:410
 msgid "Select Directory"
@@ -457,7 +456,7 @@ msgstr "RC datoteka"
 
 #: beast-gtk/bstmain.c:157
 msgid "Skin RC"
-msgstr ""
+msgstr "RC motiva"
 
 #. show splash images
 #.
@@ -524,14 +523,12 @@ msgid "Drop Down Button"
 msgstr "Padajuće dugme"
 
 #: beast-gtk/bstparam-color-spinner.c:67
-#, fuzzy
 msgid "Select Color"
-msgstr "Izaberi"
+msgstr "Izaberi boju"
 
 #: beast-gtk/bstparam-color-spinner.c:116
-#, fuzzy
 msgid "Color Entry"
-msgstr "Unos note"
+msgstr "Unos boje"
 
 #: beast-gtk/bstparam-note-sequence.c:61
 msgid "Note Sequence Grid Editor"
@@ -572,9 +569,8 @@ msgid "Searchpath Text Entry"
 msgstr "Unos putanje pretrage"
 
 #: beast-gtk/bstparam-searchpath.c:154
-#, fuzzy
 msgid "Filename Text Entry"
-msgstr "Unos teksta"
+msgstr "Unos imena datoteke"
 
 #: beast-gtk/bstparam-time.c:55
 msgid "Time Entry"
@@ -800,7 +796,7 @@ msgstr "Puštanje"
 
 #: beast-gtk/bstpreferences.c:69
 msgid "Skin"
-msgstr ""
+msgstr "Motiv"
 
 #: beast-gtk/bstprocedure.c:206
 msgid "Description"
@@ -834,10 +830,9 @@ msgid ""
 "similarly in future versions and be prepared to work around possible "
 "instabilities in the code (i.e. save your projects regularly)."
 msgstr ""
-"Uređivač polica je probni kod i sigurno će biti pokvaren do narednih "
-"izdanja. Znači, ne pouzdajte se da će izgled uređivača ostati isti u "
-"budućnosti, i budite spremni na nestabilnost u kodu (tj. redovno snimajte "
-"vaše projekte)."
+"Uređivač polica je probni kod i sigurno će biti pokvaren do narednih izdanja. "
+"Znači, ne pouzdajte se da će izgled uređivača ostati isti u budućnosti, i "
+"budite spremni na nestabilnost u kodu (tj. redovno snimajte vaše projekte)."
 
 #: beast-gtk/bstrackeditor.c:109 beast-gtk/bstrackview.c:43
 #: beast-gtk/dialogs/gadgets-beast.xml.h:22
@@ -1401,7 +1396,7 @@ msgstr "Us_meravanje"
 
 #: beast-gtk/dialogs/gadgets-beast.xml.h:34
 msgid "_Skins"
-msgstr ""
+msgstr "_Motivi"
 
 #: beast-gtk/dialogs/gadgets-beast.xml.h:35
 msgid "_Song"
@@ -1544,8 +1539,8 @@ msgid ""
 "If set, an underline in the text indicates the next character should be used "
 "for the mnemonic accelerator key"
 msgstr ""
-"Ukoliko je postavljeno, podvlaka u tekstu označava da sledeći znak "
-"predstavlja prečicu"
+"Ukoliko je postavljeno, podvlaka u tekstu označava da sledeći znak predstavlja "
+"prečicu"
 
 #: beast-gtk/gxk/gxksimplelabel.c:142
 msgid "Auto cut"
@@ -1555,8 +1550,8 @@ msgstr "Samo-iseci"
 msgid ""
 "If set, overfull text is cut-off and an ellipsis \"...\" is displayed instead"
 msgstr ""
-"Ukoliko je postavljeno, prepuni tekst se iseca i umesto njega se prikazuju "
-"tri tačke „...“"
+"Ukoliko je postavljeno, prepuni tekst se iseca i umesto njega se prikazuju tri "
+"tačke „...“"
 
 #: beast-gtk/gxk/gxksimplelabel.c:147
 msgid "Justification"
@@ -1623,9 +1618,9 @@ msgstr ""
 "signala. Podržava dva kontrolna ulaza i dva zvučna ulaza koji se mešaju "
 "zajedno prema prilagođivanju ravnoteže i nivoa. Dobitak kontroliše "
 "prepojačanje mešanog zvučnog singala. Mešani kontrolni signal, uz težinski "
-"koeficijent, određuje pojačanje programa, dozvoljavajući da spoljašnji "
-"izvori programa razdele opšti promet (tremolo). Mešani kontrolni signal ne "
-"može da utiče linearno na pojačivanje (ostalih kontrolnih signala) ili "
+"koeficijent, određuje pojačanje programa, dozvoljavajući da spoljašnji izvori "
+"programa razdele opšti promet (tremolo). Mešani kontrolni signal ne može da "
+"utiče linearno na pojačivanje (ostalih kontrolnih signala) ili "
 "eksponencijalno (za pojačanje zvučnih zignala). Konačno, glavna jačina "
 "upravlja pojačanje izlaznog signala."
 
@@ -2171,12 +2166,11 @@ msgid ""
 "avoid aliasing artefacts for rapid balance changes, the control signal is "
 "preprocessed by a simple lowpass filter with adjustable cutoff frequency."
 msgstr ""
-"BseBalance je moduo za stereo ravnanje sa dva zvučna i dva kontrolna ulaza, "
-"i na svakom se može odvojeno prilagoditi nivo. Izlazna ravnoteža se "
-"kontroliše ravnotežom prilagođenja i zbirom kontrolnih ulaza. Radi "
-"izbegavanja šuma za brzu izmenu ravnoteže, kontrolni signal se predobrađuje "
-"jednostavnim niskoprolaznim filterom sa prilagodljivom frekvencijom "
-"odsecanja."
+"BseBalance je moduo za stereo ravnanje sa dva zvučna i dva kontrolna ulaza, i "
+"na svakom se može odvojeno prilagoditi nivo. Izlazna ravnoteža se kontroliše "
+"ravnotežom prilagođenja i zbirom kontrolnih ulaza. Radi izbegavanja šuma za "
+"brzu izmenu ravnoteže, kontrolni signal se predobrađuje jednostavnim "
+"niskoprolaznim filterom sa prilagodljivom frekvencijom odsecanja."
 
 #: plugins/bsebalance.idl:40
 msgid "Left Out"
