--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Feb 16 18:53:58 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* library/scripts/Makefile.am: Install harmonic transposition script.
+
+	* library/scripts/part-harmonic-transposer.scm: Harmonic transposition
+	script: allows to transpose notes, allowing to convert between major
+	and minor scales.
+
 Mon Feb 16 12:00:17 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstauxdialogs.[hc]: implemented key grabbing dialog.
