--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,8 +1,8 @@
 Wed Feb 18 01:36:01 2004  Tim Janik  <timj@gtk.org>
 
 	* sfinote.c (sfi_note_from_string_err): in addition to parsing notes
-	like Cis-1, support #C-1 and C#-1.
-
+	like Cis-1, support #C-1 and C#-1. also, support H as alias for B.
+	
 Mon Feb 16 12:35:33 2004  Tim Janik  <timj@gtk.org>
 
 	* sfinote.c: strip whitespaces from string before attempting to parse
