--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -90,7 +90,7 @@ Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 	@uref{http://www.soundonsound.com/sos/Jun03/articles/synthsecrets50.asp,,Part50}
 	@uref{http://www.soundonsound.com/sos/Jul03/articles/synthsecrets51.asp,,Part51}
 	@uref{http://www.soundonsound.com/sos/aug03/articles/synthsecrets.htm,,Part52}
-	@c @uref{http://www.soundonsound.com/sos/sep03/articles/synthsecrets.htm,,Part53}
+	@uref{http://www.soundonsound.com/sos/sep03/articles/synthsecrets.htm,,Part53}
 	@c @uref{http://www.soundonsound.com/sos/oct03/articles/synthsecrets.htm,,Part54}
 	@c @uref{http://www.soundonsound.com/sos/nov03/articles/synthsecrets.htm,,Part55}
 	@c @uref{http://www.soundonsound.com/sos/dec03/articles/synthsecrets.htm,,Part56}
