--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,21 @@
+Thu Feb 19 03:59:07 2004  Tim Janik  <timj@gtk.org>
+
+	* sfiparams.[hc]: allowed choice values to have translatable labels
+	and blurbs, the canonical identifier is named choice_ident now, adapted
+	callers. 
+
+	* sfidl-generator.cc: provide choice values through a funciton,
+	not a static array, so we can translate the choice value label
+	and blurb. provide value conversion implementations.
+
+	* sfidl-module.cc: translate choice values.
+
+	* sfidl-parser.[hc]*: fix v_int64 access of scanner values.
+	made parseChoiceValue() accept translated labels and blurbs for choice
+	values. made choice value number assignment optional.
+
+	* sfidl-cxx.cc: fixed sizeof() vs. G_N_ELEMENTS().
+
 Wed Feb 18 01:40:53 2004  Tim Janik  <timj@gtk.org>
 
 	* sfinote.c (is_note_letter): fixed missing to_lower().
